--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -394,7 +394,7 @@ line481 'is maximized' or is maximal? Please correct.
 
 line485-487: It seems that VPD and its effect on gs is ignored here. Please clarify? The well-known stomatal closure at high VPD alone would mean higher Tair would decrease gs in the upper canopy (not 'canopy leaves' as stated) compared to the lower canopy. See Grossiord et al. (2020) Tansley Review. VPD only gets mentioned in the section on photosynthesis (l. 496). Please do so earlier.
 
-**We agree, and have modified the text in this section to emphasize the role of VPD in driving stomatal closure in sun leaves (new text italicized): “However, ~~because~~ cannot meet the demands caused by the high radiation and $g_b$ in sun leaves ***with fully open stomata, because of height-related constraints on water transport (e.g., Yoder et al. 1994, Koch et al. 2004, Sillett et al 2010) and/or increased leaf-air VPD caused by leaf warming in sunlit canopy locations [@buckleyStomatalConductanceOptimized2014]***. These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table 2), which drives the lower intracellular CO~2~ and $\delta^{13}C$ discussed in section 3.3 (Table 1).  Stomatal depression reduces transpirational cooling (Fig. `r fig_leaf_T`), thus amplifying the warming of sun leaves by high radiation. ~~In sun leaves, Tleaf thus further increases due to the lack of transpirational cooling.~~” We have also added the phrase ***“(driven by increased VPD)”***after “sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$”, and clarified that “high $T_{air}$ should decrease $g_s$ of ***upper canopy***leaves”.**
+**We agree, and have modified the text in this section to emphasize the role of VPD in driving stomatal closure in sun leaves (new text italicized): “However, ~~because~~ cannot meet the demands caused by the high radiation and $g_b$ in sun leaves ***with fully open stomata, because of height-related constraints on water transport (e.g., Yoder et al. 1994, Koch et al. 2004, Sillett et al 2010) and/or increased leaf-air VPD caused by leaf warming in sunlit canopy locations [@buckleyStomatalConductanceOptimized2014]***. These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table 2), which drives the lower intracellular CO~2~ and $\delta^{13}C$ discussed in section 3.3 (Table 1).  Stomatal depression reduces transpirational cooling (Fig. 3), thus amplifying the warming of sun leaves by high radiation. ~~In sun leaves, Tleaf thus further increases due to the lack of transpirational cooling.~~” We have also added the phrase ***“(driven by increased VPD)”***after “sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$”, and clarified that “high $T_{air}$ should decrease $g_s$ of ***upper canopy***leaves”.**
 
 
 line510-525: There is a long discussion about whether Topt for gas exchange or its components differs between overstory and understory. Here the authors aren’t clear, but such a comparison only matters if the same species is measured in different canopy layers.
@@ -417,7 +417,7 @@ line650: 'In addition to lower drought resistance of growth, larger trees freque
 
 line946: '… how … temperature sensitivities of metabolism and woody growth vary across these vertical gradients'. I’m not sure why the authors are speculating on woody growth in this context, surely it would be extremely difficult to show that woody growth varied vertically in an individual? And that across-individual differences compound comparisons of individuals in different vertical strata? Shouldn’t these things be pointed out to readers?
 
-**This has been reworded to read, "However, there remains a lot of uncertainty as to how temperature sensitivity of foliar gas exchange varies across these vertical gradients. Similarly, much remains to be learned about how crown exposure influences the temperature sensitivity of woody stem growth. While the preponderance of available data suggest that large canopy trees are the most vulnerable to warming when water is limited, far less is known about the responses of understory trees, which might be more vulnerable to chronic warming stress under relatively mesic conditions (Fig. 4)."**
+**This has been reworded to read, "However, uncertainty remains about how temperature sensitivity of foliar gas exchange varies across these vertical gradients. Similarly, much remains unknown about how crown exposure influences the temperature sensitivity of woody stem growth. While most available data suggest that large canopy trees are the most vulnerable to warming when water is limited, far less is known about the responses of understory trees, which might be more vulnerable to chronic warming stress under relatively mesic conditions (Fig. 4)."**
 
 
 \newpage
