--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -208,10 +208,10 @@ These usually-modest gradients in $T_{air}$ combine with the above-described gra
 
 ## 2. Leaf temperature 
 
-$T_{leaf}$ is strongly tied, and usually within a few degrees of, $T_{air}$ [@drakeNoEvidenceHomeostatic2020], but can be substantially warmer or cooler under certain conditions (Fig. `r fig_leaf_T`; Note `r Notes_leafTbiophysics`). 
-Deviation of $T_{leaf}$ from $T_{air}$ is influenced by other micrometeorological drivers and by leaf traits and stomatal conductance (Note `r Notes_leafTbiophysics`), all of which vary across forest vertical gradients (Fig. `r fig_schematic`).
-High radiation in the upper canopy (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`).
-However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce leaf-air temperature differences [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
+$T_{leaf}$ is strongly tied, and usually within a few degrees of, $T_{air}$ [@drakeNoEvidenceHomeostatic2020;@rey-sanchez_spatial_2016], but can be substantially warmer or cooler under certain conditions [@rey-sanchez_spatial_2016;@doughtyAreTropicalForests2008;@vogelLeavesLowestHighest2009]. 
+Deviation of $T_{leaf}$ from $T_{air}$ is influenced by other micrometeorological drivers and by leaf traits and stomatal conductance (Fig. `r fig_leaf_T`; Note `r Notes_leafTbiophysics`), all of which vary across forest vertical gradients (Fig. `r fig_schematic`).
+High radiation in the upper canopy (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`a).
+However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
 In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (see sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
 In contrast, in the lower canopy, greater RH and lower wind speeds may limit $\lambda E$ (through reduced VPD and $g_b$), increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
 Leaves in these normally-shaded locations experience rapid light and temperature surges during sunflecks (>10$^\circ$C)  [@waySunflecksTreesForests2012].
@@ -221,7 +221,8 @@ Leaves in these normally-shaded locations experience rapid light and temperature
 
 
 
-Elevation of $T_{leaf}$ above $T_{air}$ is not uniform across time and space, but varies with micrometeorological conditions. During drought (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, $T_{leaf} - T_{air}$ will tend to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
+Elevation of $T_{leaf}$ above $T_{air}$ is not uniform across time and space, but varies with micrometeorological conditions. 
+During drought (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, $T_{leaf} - T_{air}$ will tend to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have stronger $g_s$ limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017 <!-- @songTreeSurfaceTemperature2020-->]. 
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
