--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -56,6 +56,18 @@ SIfig_NEON_all = "S1"
 #SI figure captions
 SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)"
 
+#Word count
+w_intro=414
+w_biophys=1582
+w_tleaf=758
+w_traits= 2477
+w_met=1000
+w_ecol=1352
+w_vertgradients=w_biophys+w_tleaf+w_traits+w_met+w_ecol
+w_implications=2399
+w_conclusions=248
+w_total=w_intro+w_vertgradients+w_implications+w_conclusions
+
 ```
 
 
@@ -96,12 +108,12 @@ Kristina J. Anderson-Teixeira^1,3^*
 
 Text | word count | other | n
 ---|---|-----|--------------------
-Total word count (excluding summary, references and legends) | 	10604 |	No. of figures | 	6 (all colour)
+Total word count (excluding summary, references and legends) | 	`r w_total` |	No. of figures | 	6 (all colour)
 Summary|  	200 | 	No. of Tables | 	2  
-Introduction|	416 |	No of Supporting Information files | 	6
-Review of vertical gradients |	7541	||	 
-Implications |	2399	 ||
-Conclusions |	248	||
+Introduction|	`r w_intro` |	No of Supporting Information files | 	6
+Review of vertical gradients |	`r w_vertgradients`	||	 
+Implications |	`r w_implications`	 ||
+Conclusions |	`r w_conclusions`	||
 Acknowledgments | 44	||	
 
 \newpage
@@ -221,15 +233,15 @@ Leaves in these normally-shaded locations experience rapid light and temperature
 
 
 
-Elevation of $T_{leaf}$ above $T_{air}$ is not uniform across time and space, but varies with micrometeorological conditions. 
-During drought (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, $T_{leaf} - T_{air}$ will tend to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
+Elevation of $T_{leaf}$ above $T_{air}$ varies with micrometeorological conditions. 
+During drought (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, $T_{leaf} - T_{air}$ will tend to be higher in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have stronger $g_s$ limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017 <!-- @songTreeSurfaceTemperature2020-->]. 
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
 Limitations in heat dissipation in shade leaves, together with physiological propensities, may cause above-optimal $T_{leaf}$ under slight heat or drought stress or during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
-In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory and inner canopy (Fig. `r fig_NEON_vertical`) also inhibits evaporative cooling by reducinf VPD, thus increasing $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
+In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH (lower VPD) in the understory and inner canopy (Fig. `r fig_NEON_vertical`) also inhibits evaporative cooling, thus increasing $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
-Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`). 
+Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure. 
 Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most incoming radiation and preventing vertical air mixing in the understory. 
 Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than lower-canopy leaves, in some cases exceeding photosynthetic temperature optima ($T_{opt}$) because of $g_s$ limitation and high radiation [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999-->; @doughtyAreTropicalForests2008; <!--@fauset_differences_2018-->; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory, which can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`; <!--@hadleyInfluenceKrummholzMat1987--> @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
